k8s/hash-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hash-network-policy
  namespace: proxidize
spec:
  podSelector:
    matchLabels:
      app: hash-service
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
